ecmascript/parser/tests/typescript-errors/nullish-coalescing-operator/no-paren-and-nullish/input.ts.stderr
error: Nullish coalescing operator(??) requires parens when mixing with logical operators
 --> $DIR/tests/typescript-errors/nullish-coalescing-operator/no-paren-and-nullish/input.ts:1:1
  |
1 | c && d ?? e;
  | ^^^^^^

